2005-10-23  Jerry DeLisle  <jvdelisle@verizon.net>

PR libgfortran/24489
        * io/transfer.c (read_block): Change the order of execution to not read
        past end-of-record.
        (read_block_direct): Same change.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@105840 138bc75d-0d04-0410-961f-82ee72b054a4